--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
         tools:targetApi="31">
         <activity
             android:name=".PaymentActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Project" />
+            android:exported="true"
+            android:theme="@style/Theme.Project" >
+
+        </activity>
         <activity
             android:name=".MainActivity3"
             android:exported="true"
